[package]
name = "asciichart"
version = "0.1.0"
edition = "2021"
description = "dump old-fashioned ascii chart"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
